<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/about_div_toplayout"
        android:layout_width="match_parent"
        android:background="@color/red"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/about_img_back"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_back"/>

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/about_title"
            android:textColor="@color/black"
            android:textSize="30dp" />

    </RelativeLayout>




    <LinearLayout
        android:id="@+id/about_div_bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/about_div_toplayout">

        <LinearLayout
            android:id="@+id/about_versoninfo_div"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="200dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:gravity="center"
                android:text="@string/about_versiontitle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/about_vesion_hint"
                    android:gravity="center"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/about_vesion"/>
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/about_update_time"
                android:gravity="center"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/about_time"/>
        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/about_vesion_check"
                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_vesion_more_title"
                android:textSize="30dp"
                android:gravity="center"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_vesion_more"
                android:textSize="20dp"/>
        </LinearLayout>


    </LinearLayout>




</RelativeLayout>