<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11ffffff">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/source_dialog_backgroud"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_download_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/download_title"
            android:textColor="#FF0000"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/dialog_download_button_hint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_download_title"
            android:textColor="#000000"
            android:textSize="18dp"
            android:text="@string/download_hint1" />

        <TextView
            android:id="@+id/dialog_download_button_hint2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_download_button_hint1"
            android:text="@string/download_hint2"
            android:textColor="#000000"
            android:textSize="18dp" />

        <ProgressBar
            android:id="@+id/source_download_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="350dp"
            android:layout_below="@id/dialog_download_button_hint2"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/dialog_download_button_hint3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/source_download_progressbar"
            android:text="@string/download_hint3"
            android:textColor="#000000"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_above="@id/dialog_download_div_end"
            android:background="#E4E4E4" />

        <LinearLayout
            android:id="@+id/dialog_download_div_end"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_download_button_update"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/download_background"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="18sp" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>