<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/syncnotes_div_toplayout"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/syncnotes_img_back"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_back"/>
        <TextView
            android:id="@+id/syncnotes_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/sync_title"
            android:textColor="@color/black"
            android:textSize="30dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/syncnotes_div_contentlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/sync_status"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000"
            android:layout_alignParentTop="true"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/sync_textview_sync_network"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/sync_status"
            android:gravity="center"
            android:textSize="22dp"
            android:text="@string/sync_textview_syncfromnet"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/sync_textview_sync_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/sync_textview_sync_network"
            android:gravity="center"
            android:text="@string/sync_textview_savetonet"
            android:textColor="#000000"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/sync_textview_sync_helpme"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/sync_textview_sync_save"
            android:gravity="center"
            android:text="@string/sync_textview_helpme"
            android:textColor="#000000"
            android:textSize="22dp" />

    </RelativeLayout>
</LinearLayout>