<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >



        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="340dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/material_dialog_exit"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/dialog_language_layout_top"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <ImageView
                    android:id="@+id/dialog_language_wannring"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/icon_language"/>
                <TextView
                    android:id="@+id/dialog_exit_title"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/dialog_language_wannring"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/language_title"
                    android:textColor="#000000"
                    android:textSize="22dp" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_below="@id/dialog_language_layout_top">

                <TextView
                    android:id="@+id/languagechoose_english"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:text="@string/language_english"/>

                <TextView
                    android:id="@+id/languagechoose_chinese"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:text="@string/language_chinese"/>

                <TextView
                    android:id="@+id/languagechoose_spanish"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:text="@string/language_spanish"/>

                <TextView
                    android:id="@+id/languagechoose_chinese_tw"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:text="@string/language_chinesetroditional"/>



            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey"
                android:layout_above="@id/dialog_language_layout_bottom"/>
            <LinearLayout
                android:id="@+id/dialog_language_layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/languagechoose_button_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/language_cancel"
                    android:textColor="@color/blue"
                    android:textSize="20dp" />
            </LinearLayout>
        </RelativeLayout>









    </RelativeLayout>


</RelativeLayout>