<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/material_dialog_exit"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/dialog_cancel_layout_top"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:id="@+id/dialog_cancel_title"
                android:layout_width="wrap_content"
                android:layout_below="@id/dialog_img_wannring"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/CancelEdit_title"
                android:textColor="#000000"
                android:textSize="22dp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/dialog_cancel_layout_top"
            android:layout_above="@id/dialog_cancel_layout_bottom">

            <TextView
                android:id="@+id/dialog_cancel_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:textSize="20dp"
                android:text="@string/CancelEdit_message" />


        </LinearLayout>



        <LinearLayout
            android:id="@+id/dialog_cancel_layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_cancel_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/CancelEdit_no"
                android:textColor="@color/blue"
                android:textSize="20dp" />


            <Button
                android:id="@+id/dialog_cancel_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/CancelEdit_yes"
                android:textColor="@color/red"
                android:textSize="20dp" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>